Made it so Tool configurations can be transitive now.